henkou1でコミット

--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
 
 <h2>What's New</h2>
 <dl>
-<dt>2021/12/15</dt>
-<dd>fixmenu_pagetop.jsからscroll.jsに変更。既に利用中のお客様は特に設定の変更は不要です、引き続きご利用下さい。<span class="newicon">NEW</span></dd>
+<dt>2022/2/26</dt>
+<dd>サイト創設!!<span class="newicon">NEW</span></dd>
 <dt>2020/09/27</dt>
 <dd>初心者向け無料ホームページテンプレートtp_beginner6公開。</dd>
 <dt>20XX/00/00</dt>
